// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu matches snapshots 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="dropdown-menu-button"
    data-rac=""
    data-react-aria-pressable="true"
    id="react-aria-1"
    style="--button-bg: #D4450C; --button-bg-hover: #be3c08; --button-bg-active: #b03808; --button-color: #ffffff; --button-outline: #ffffff; --button-shadow: #000000; --button-font-weight: 700; --dropdown-caret-color: #ffffff;"
    tabindex="0"
    type="button"
  >
    Test Menu
  </button>
</DocumentFragment>
`;

exports[`DropdownMenu matches snapshots 2`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="dropdown-menu-button"
    data-rac=""
    data-react-aria-pressable="true"
    id="react-aria-4"
    style="--button-bg: #ffffff; --button-bg-hover: #ffffff; --button-bg-active: #e5e5e5; --button-color: #424242; --button-outline: #ffffff; --button-shadow: #000000; --button-font-weight: 400; --dropdown-caret-color: #000000; width: 20rem;"
    tabindex="0"
    type="button"
  >
    Test Menu
  </button>
</DocumentFragment>
`;
